# remarkable-mcp

./: .gitignore  README.md  pyproject.toml  voicematch.md
api/: auth.py  database.py  main.py  photos.py  routes.py  worker.py
daily_podcast/: __init__.py  __main__.py  config.py  extract.py  feed.py  personalities.py  pipeline.py  speak.py  summarize.py
landing/: index.html
remarkable_mcp/: api.py  extract.py
tests/: test_daily_podcast.py
web/: index.html  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx
web/src/components/: AudioPlayer.tsx  StatusBadge.tsx
web/src/pages/: Dashboard.tsx  Login.tsx  PhotoLibrary.tsx  Player.tsx  Settings.tsx  ShowDetail.tsx  ShowEditor.tsx  Shows.tsx
